2014-12-04  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-56

	* pyatmlab/collocations.py(CollocationDescriber):

	- Fig bug with regridding.  No need to "remove data above range".  I'm
	going to interpolate on the new grid *anyway*.  Removing just risks
	removing too much and extrapolating where there is no need.  It's
	extrapolation I want to avoid, the way to do this is to set the target
	grid (from z_xh) small enough and not to remove data wherever I'm
	above lowest_z_max.

	- Write out all DOFs to get a histogram with pgfplots

	- Move get_shared_range into its own routine.  I might have to look at
	lower limits as well.

	* pyatmlab/datasets.py(EurekaHDF):

	- Remove workaround for reading PEARL HDF4 file, after bugfix in
	Python-hdf4.

	* pyatmlab/math.py:

	(linear_interpolation_matrix):

	- Oops, W was turned around.  Fixed.

	(regrid_ak):

	- Don't mess with the new grid.  Only with the old.

2014-11-28  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-55

	* pyatmlab/collocations.py(CollocationDescriber):

	- Fix bug when flagging data, flag on a copy not on the original,
	oops.

	- Start working toward treating errors.  Work in progress.

	* pyatmlab/constants.py:

	- Add avogadro constant and kilo

	* pyatmlab/datasets.py:

	- Started reading routine for HDF4-based Eureka data

2014-11-17  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-54

	* pyatmlab/collocations.py(CollocationDescriber):

	- In updated profile intercomparison, fix bug when some fields have
	more flagged data than others.

	- Write out z-grid after smoothing

	- Add y-label to ak-plots

	- Plot DOF histograms

	- Plot scatterplots as difference vs. reference 

	* pyatmlab/constants.py:

	- Add atm = 101325 # Pa

	* pyatmlab/datasets.py:

	(TansoFTSBase):

	- Fix bug, consider flags also for p_for_T

	(TansoFTSv10x):

	- Fix bug with flagging

	(ACEFTS):

	- Convert P_atm to P_pa

2014-11-07  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-53
